# ChangeLog for dev-util/qgit
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/ChangeLog,v 1.13 2006/09/27 19:53:25 ferdy Exp $

*qgit-1.5.1 (27 Sep 2006)

  27 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org> -qgit-1.5.ebuild,
  +qgit-1.5.1.ebuild:
  New version. Remove 1.5 as it has an annoying bug.

*qgit-1.5 (10 Sep 2006)

  10 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org> +qgit-1.5.ebuild:
  New upstream version.

  15 Aug 2006; Markus Rothe <corsair@gentoo.org> qgit-1.4.ebuild:
  Added ~ppc64

*qgit-1.4 (30 Jul 2006)

  30 Jul 2006; Fernando J. Pereda <ferdy@gentoo.org> +qgit-1.4.ebuild:
  Version bump, bug #141951. Reported by Troy Telford <troyt@myrealbox.com>

  30 Jun 2006; Luca Barbato <lu_zero@gentoo.org> qgit-1.2.ebuild:
  Marked ~ppc

  02 Jun 2006; Caleb Tennis <caleb@gentoo.org> qgit-1.1.1.ebuild,
  qgit-1.2.ebuild:
  Make qt-3 dep a hard dep on qt-3

  01 May 2006; Scott Stoddard <deltacow@gentoo.org> qgit-1.2.ebuild:
  Added ~amd64 (bug #131714)

*qgit-1.2 (29 Apr 2006)

  29 Apr 2006; Fernando J. Pereda <ferdy@gentoo.org> -qgit-0.96.1.ebuild,
  -qgit-0.97.1.ebuild, +qgit-1.2.ebuild:
  New upstream version. Remove ancient ones

  25 Mar 2006; Fernando J. Pereda <ferdy@gentoo.org> qgit-1.1.1.ebuild:
  inherit qt3 to avoid sandbox violations that I didn't suffer from, hopefully
  fixing bug #127280

*qgit-1.1.1 (23 Mar 2006)

  23 Mar 2006; Fernando J. Pereda <ferdy@gentoo.org> -qgit-1.1_rc1.ebuild,
  +qgit-1.1.1.ebuild:
  Version bump, as per bug #112120, reported by Bertrand Jacquin
  <beber.gentoo@gmail.com>. Remove release candidates

*qgit-1.1_rc1 (09 Jan 2006)

  09 Jan 2006; Fernando J. Pereda <ferdy@gentoo.org> +qgit-1.1_rc1.ebuild:
  New upstream version

*qgit-0.97.1 (11 Nov 2005)

  11 Nov 2005; Fernando J. Pereda <ferdy@gentoo.org> +qgit-0.97.1.ebuild:
  version bump, wrt bug #112120

*qgit-0.96.1 (30 Oct 2005)
