@@ -1,0 +1,3 @@
+MD5 251568da2d93b0e621ea7a2cb7de611d qgit-1.5.2.tar.bz2 189074
+RMD160 27b8a838514efea9c86b4936696d832ff42c9dd6 qgit-1.5.2.tar.bz2 189074
+SHA256 c1a448bb75a4b596567442461715cce3f209780ceb3356e5ab1f21a12418c8d3 qgit-1.5.2.tar.bz2 189074
