@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/qgit
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/ChangeLog,v 1.13 2006/09/27 19:53:25 ferdy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/ChangeLog,v 1.14 2006/09/30 10:46:15 ferdy Exp $
+
+*qgit-1.5.2 (30 Sep 2006)
+
+  30 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org> +qgit-1.5.2.ebuild:
+  New upstream version.
 
 *qgit-1.5.1 (27 Sep 2006)
 
